plugins {
    id 'java'
    id 'com.epages.restdocs-api-spec' version '0.18.2'
    id 'org.springframework.boot' version '3.1.5'
    id 'io.spring.dependency-management' version '1.1.3'
}

group 'com.seunghoona.restdocs'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.8.2'
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

jar {
    exclude("docs/web/**", "docs/DocumentMain.class")
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'io.rest-assured:rest-assured:5.3.1'
    implementation 'org.springframework.restdocs:spring-restdocs-restassured'
    implementation 'com.epages:restdocs-api-spec-restassured:0.18.2'
    implementation 'com.epages:restdocs-api-spec-mockmvc:0.18.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
    useJUnitPlatform()
}